Update Swagger validate request and default values.
