# docs/swagger.yaml
@@ -126,7 +126,8 @@ paths:
   /auth/logout:
     post:
       parameters:
-      - description: example:Bearer token (Bearer+space+token).
+      - default: Bearer
+        description: example:Bearer token (Bearer+space+token).
         in: header
         name: Authorization
         required: true
@@ -162,7 +163,8 @@ paths:
   /auth/refresh:
     post:
       parameters:
-      - description: example:Bearer token (Bearer+space+token).
+      - default: Bearer
+        description: example:Bearer token (Bearer+space+token).
         in: header
         name: Authorization
         required: true
@@ -235,26 +237,33 @@ paths:
   /category:
     get:
       parameters:
-      - description: example:Bearer token (Bearer+space+token).
+      - default: Bearer
+        description: example:Bearer token (Bearer+space+token).
         in: header
         name: Authorization
         required: true
         type: string
       - description: Category ID
         in: query
+        minimum: 1
         name: id
         type: integer
-      - description: 'Category Name (maxLength: 100)'
+      - description: Category Name
         in: query
+        maxLength: 100
         name: name
         type: string
-      - description: Page (Please start from 1)
+      - default: 1
+        description: Page
         in: query
+        minimum: 1
         name: page
         required: true
         type: integer
-      - description: Limit (Please start from 5 or 10)
+      - default: 5
+        description: Limit
         in: query
+        minimum: 2
         name: limit
         required: true
         type: integer
@@ -299,13 +308,15 @@ paths:
       - '"Category"'
     post:
       parameters:
-      - description: example:Bearer token (Bearer+space+token).
+      - default: Bearer
+        description: example:Bearer token (Bearer+space+token).
         in: header
         name: Authorization
         required: true
         type: string
-      - description: 'Category Name (maxLength: 100)'
+      - description: Category Name
         in: formData
+        maxLength: 100
         name: name
         required: true
         type: string
@@ -351,13 +362,15 @@ paths:
   /category/{id}:
     delete:
       parameters:
-      - description: example:Bearer token (Bearer+space+token).
+      - default: Bearer
+        description: example:Bearer token (Bearer+space+token).
         in: header
         name: Authorization
         required: true
         type: string
       - description: Category ID
         in: path
+        minimum: 1
         name: id
         required: true
         type: integer
@@ -413,13 +426,15 @@ paths:
       - '"Category"'
     get:
       parameters:
-      - description: example:Bearer token (Bearer+space+token).
+      - default: Bearer
+        description: example:Bearer token (Bearer+space+token).
         in: header
         name: Authorization
         required: true
         type: string
       - description: Category ID
         in: path
+        minimum: 1
         name: id
         required: true
         type: integer
@@ -464,18 +479,21 @@ paths:
       - '"Category"'
     patch:
       parameters:
-      - description: example:Bearer token (Bearer+space+token).
+      - default: Bearer
+        description: example:Bearer token (Bearer+space+token).
         in: header
         name: Authorization
         required: true
         type: string
       - description: Category ID
         in: path
+        minimum: 1
         name: id
         required: true
         type: integer
-      - description: 'Category Name (maxLength: 100)'
+      - description: Category Name
         in: query
+        maxLength: 100
         name: name
         required: true
         type: string
@@ -567,21 +585,25 @@ paths:
   /task:
     get:
       parameters:
-      - description: example:Bearer token (Bearer+space+token).
+      - default: Bearer
+        description: example:Bearer token (Bearer+space+token).
         in: header
         name: Authorization
         required: true
         type: string
       - description: Task ID
         in: formData
+        minimum: 1
         name: id
         type: integer
       - description: User ID
         in: formData
+        minimum: 1
         name: user_id
         type: integer
-      - description: 'Title (maxLength: 100)'
+      - description: Title
         in: formData
+        maxLength: 100
         name: title
         type: string
       - description: 'Specify Datetime (DateTime: 2006-01-02 15:04:05)'
@@ -596,13 +618,17 @@ paths:
         in: formData
         name: is_complete
         type: boolean
-      - description: Page (Please start from 1)
+      - default: 1
+        description: Page
         in: query
+        minimum: 1
         name: page
         required: true
         type: integer
-      - description: Limit (Please start from 5 or 10)
+      - default: 5
+        description: Limit
         in: query
+        minimum: 2
         name: limit
         required: true
         type: integer
@@ -638,23 +664,27 @@ paths:
       consumes:
       - multipart/form-data
       parameters:
-      - description: example:Bearer token (Bearer+space+token).
+      - default: Bearer
+        description: example:Bearer token (Bearer+space+token).
         in: header
         name: Authorization
         required: true
         type: string
       - description: User ID
         in: formData
+        minimum: 1
         name: user_id
         required: true
         type: integer
       - description: Category ID
         in: formData
+        minimum: 1
         name: category_id
         required: true
         type: integer
-      - description: 'Title (maxLength: 100)'
+      - description: Title
         in: formData
+        maxLength: 100
         name: title
         required: true
         type: string
@@ -678,12 +708,18 @@ paths:
         in: formData
         name: is_specify_time
         type: boolean
-      - description: 'Priority (Enum: [1, 2, 3])'
+      - default: 1
+        description: Priority
+        enum:
+        - 1
+        - 2
+        - 3
         in: formData
         name: priority
         required: true
         type: integer
-      - description: Is Complete
+      - default: false
+        description: Is Complete
         in: formData
         name: is_complete
         type: boolean
@@ -729,13 +765,15 @@ paths:
   /task/{id}:
     delete:
       parameters:
-      - description: example:Bearer token (Bearer+space+token).
+      - default: Bearer
+        description: example:Bearer token (Bearer+space+token).
         in: header
         name: Authorization
         required: true
         type: string
       - description: Task ID
         in: path
+        minimum: 1
         name: id
         required: true
         type: integer
@@ -791,13 +829,15 @@ paths:
       - '"Task"'
     get:
       parameters:
-      - description: example:Bearer token (Bearer+space+token).
+      - default: Bearer
+        description: example:Bearer token (Bearer+space+token).
         in: header
         name: Authorization
         required: true
         type: string
       - description: Task ID
         in: path
+        minimum: 1
         name: id
         required: true
         type: integer
@@ -844,22 +884,26 @@ paths:
       consumes:
       - multipart/form-data
       parameters:
-      - description: example:Bearer token (Bearer+space+token).
+      - default: Bearer
+        description: example:Bearer token (Bearer+space+token).
         in: header
         name: Authorization
         required: true
         type: string
       - description: Task ID
         in: path
+        minimum: 1
         name: id
         required: true
         type: integer
       - description: Category ID
         in: formData
+        minimum: 1
         name: category_id
         type: integer
-      - description: 'Title (maxLength: 100)'
+      - description: Title
         in: formData
+        maxLength: 100
         name: title
         type: string
       - description: Note
@@ -882,7 +926,11 @@ paths:
         in: formData
         name: is_specify_time
         type: boolean
-      - description: 'Priority (Enum: [1, 2, 3])'
+      - description: Priority
+        enum:
+        - 1
+        - 2
+        - 3
         in: formData
         name: priority
         required: true
